ndb - bug#47131 - add pseudo columns for extent space/free space